--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "node.js project",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "LG",
   "license": "ISC",
@@ -15,6 +16,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "heroku": "^7.22.9",
     "method-override": "^3.0.0",
     "moment": "^2.24.0",
     "mongoose": "^5.4.21",
